# robot-analysis-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  hello.py  main.py  pyproject.toml  run.sh
examples/r_planar/: joints_info.csv  links_info.csv
examples/rpr_planar/: joints_info.csv  links_info.csv
examples/rr_planar/: joints_info.csv  links_info.csv
examples/ur5/: joints_info.csv  links_info.csv
notebooks/: demo.ipynb  demo1_stepper_motor_case.ipynb  demo2_DC_motor_case_velocity_control.ipynb
src/robot_analysis/: controller.py  core.py  demo.ipynb  planar_nr.py
